--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "semantic-ui-react": "^0.76.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
